Fix/job lists qa (#334)
* fix(filters): active state on filter buttons and visual bugs

* fix(navigation): flyout navigation height fix on mobile

* fix(navigation): calculate view height

* fix(navigation): remove navigation height

* fix(filters): adapt styling for dark mode and refactor height calc

* fix(filters): filter button clear all color

* fix(jobs): text teaser component overflowing

--- a/src/styles/includes/_navigation.scss
+++ b/src/styles/includes/_navigation.scss
@@ -2,7 +2,7 @@
 @import "../core/mixins";
 
 @mixin bp-navigation {
-	@media screen and (max-width: 810px) {
+	@media screen and (max-width: 599px) {
 		@content;
 	}
 }
@@ -312,7 +312,7 @@
 		left: 100vw;
 		top: 0;
 		bottom: 0;
-		height: 100vh;
+		height: var(--mobile-height);
 		width: 100vw;
 		background: $color-primary--black;
 		color: $color-primary--white;
